--- a/MacSVG Plugin Projects/macSVG Plugins/SVGAttributeEditor/SVGAttributeEditor/SVGAttributeEditor.xib
+++ b/MacSVG Plugin Projects/macSVG Plugins/SVGAttributeEditor/SVGAttributeEditor/SVGAttributeEditor.xib
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1217" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11542"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14109"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -150,7 +150,7 @@
                     </subviews>
                 </customView>
             </subviews>
-            <point key="canvasLocation" x="294.5" y="476"/>
+            <point key="canvasLocation" x="148" y="240"/>
         </customView>
     </objects>
 </document>
