The MARKETING_VERSION is incremented to v 1.1.6.
All cell-based table views were converted to view-based.

A standard macOS Share button was added to the tool panel.  It is mainly useful for sending an AirDrop URL to an iPhone or Mac to quickly access the built-in macSVG web server.  It produces some warning messages in the log file about SHKRemoteView, but they seem to be common for AirDrop sharing applications and are apparently harmless.

--- a/MacSVG Plugin Projects/macSVG Plugins/ImageElementEditor/ImageElementEditor/ImageElementEditor.xib
+++ b/MacSVG Plugin Projects/macSVG Plugins/ImageElementEditor/ImageElementEditor/ImageElementEditor.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14868" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15400" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14868"/>
-        <plugIn identifier="com.apple.WebKitIBPlugin" version="14868"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15400"/>
+        <plugIn identifier="com.apple.WebKitIBPlugin" version="15400"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -150,7 +150,7 @@
                                     <webView identifier="ImageElementEditorWebView" fixedFrame="YES" maintainsBackForwardList="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bVG-Uj-gjR" customClass="ImageElementEditorWebView">
                                         <rect key="frame" x="1" y="-1" width="245" height="100"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                        <webPreferences key="preferences" identifier="ImageElementEditorWebView" defaultFontSize="12" defaultFixedFontSize="12"/>
+                                        <webPreferences key="preferences" identifier="ImageElementEditorWebView" defaultFontSize="12" defaultFixedFontSize="12" plugInsEnabled="NO" javaEnabled="NO" javaScriptCanOpenWindowsAutomatically="NO"/>
                                         <connections>
                                             <outlet property="UIDelegate" destination="-2" id="DtQ-og-wNd"/>
                                             <outlet property="downloadDelegate" destination="-2" id="Ty3-0r-hny"/>
