--- a/MacSVG Plugin Projects/macSVG Plugins/PointsAttributeEditor/PointsAttributeEditor/PointsAttributeEditor.xib
+++ b/MacSVG Plugin Projects/macSVG Plugins/PointsAttributeEditor/PointsAttributeEditor/PointsAttributeEditor.xib
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10116" systemVersion="15G1004" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" customObjectInstantitationMethod="direct">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15400" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <development version="6300" identifier="xcode"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10116"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15400"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="PointsAttributeEditor">
@@ -24,11 +24,11 @@
             <rect key="frame" x="0.0" y="0.0" width="270" height="254"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
             <subviews>
-                <customView id="Hm1-zE-QJl">
+                <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hm1-zE-QJl">
                     <rect key="frame" x="0.0" y="0.0" width="270" height="254"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <subviews>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="Lyp-nh-vKC">
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lyp-nh-vKC">
                             <rect key="frame" x="18" y="232" width="120" height="14"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Points Attribute Editor" id="EBE-yx-NgL">
@@ -37,7 +37,7 @@
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <button verticalHuggingPriority="750" id="olU-vU-QkA">
+                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="olU-vU-QkA">
                             <rect key="frame" x="23" y="92" width="26" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <buttonCell key="cell" type="square" title="+" bezelStyle="shadowlessSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="e4l-fI-Qu3">
@@ -48,7 +48,7 @@
                                 <action selector="addPointsRow:" target="-2" id="Z10-w0-lvj"/>
                             </connections>
                         </button>
-                        <button verticalHuggingPriority="750" id="Mwh-bZ-vzX">
+                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Mwh-bZ-vzX">
                             <rect key="frame" x="49" y="92" width="26" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <buttonCell key="cell" type="square" title="-" bezelStyle="shadowlessSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="OBz-W7-laJ">
@@ -59,15 +59,15 @@
                                 <action selector="deletePointsRow:" target="-2" id="ZdU-DO-98Y"/>
                             </connections>
                         </button>
-                        <scrollView autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="9cH-tY-zZW">
+                        <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9cH-tY-zZW">
                             <rect key="frame" x="23" y="121" width="224" height="105"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                            <clipView key="contentView" copiesOnScroll="NO" id="nyc-eP-wGZ">
-                                <rect key="frame" x="1" y="23" width="222" height="81"/>
+                            <clipView key="contentView" ambiguous="YES" drawsBackground="NO" copiesOnScroll="NO" id="nyc-eP-wGZ">
+                                <rect key="frame" x="1" y="0.0" width="222" height="104"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnReordering="NO" multipleSelection="NO" autosaveColumns="NO" typeSelect="NO" rowSizeStyle="automatic" headerView="lku-sr-kiR" viewBased="YES" id="0Eg-AS-wPm">
-                                        <rect key="frame" x="0.0" y="0.0" width="201" height="0.0"/>
+                                    <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnReordering="NO" multipleSelection="NO" autosaveColumns="NO" typeSelect="NO" rowSizeStyle="automatic" headerView="lku-sr-kiR" viewBased="YES" floatsGroupRows="NO" id="0Eg-AS-wPm">
+                                        <rect key="frame" x="0.0" y="0.0" width="222" height="81"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <size key="intercellSpacing" width="3" height="2"/>
                                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -91,7 +91,7 @@
                                                         <rect key="frame" x="1" y="1" width="64" height="17"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                         <subviews>
-                                                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="KtG-ic-FZq">
+                                                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KtG-ic-FZq">
                                                                 <rect key="frame" x="0.0" y="0.0" width="64" height="17"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                 <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="kU1-hr-xTw">
@@ -124,7 +124,7 @@
                                                         <rect key="frame" x="68" y="1" width="64" height="17"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                         <subviews>
-                                                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="GPX-89-JAR">
+                                                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GPX-89-JAR">
                                                                 <rect key="frame" x="0.0" y="0.0" width="64" height="17"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                 <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="7sH-Kb-gwa">
@@ -157,7 +157,7 @@
                                                         <rect key="frame" x="135" y="1" width="64" height="17"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                         <subviews>
-                                                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="H1L-D3-y8x">
+                                                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="H1L-D3-y8x">
                                                                 <rect key="frame" x="0.0" y="0.0" width="64" height="17"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                 <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="I2p-Cn-Hq1">
@@ -182,11 +182,11 @@
                                 </subviews>
                                 <nil key="backgroundColor"/>
                             </clipView>
-                            <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="C3c-4v-baX">
+                            <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="C3c-4v-baX">
                                 <rect key="frame" x="-100" y="-100" width="238" height="15"/>
                                 <autoresizingMask key="autoresizingMask"/>
                             </scroller>
-                            <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="xQn-kB-BFk">
+                            <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="xQn-kB-BFk">
                                 <rect key="frame" x="-100" y="-100" width="15" height="102"/>
                                 <autoresizingMask key="autoresizingMask"/>
                             </scroller>
@@ -195,7 +195,7 @@
                                 <autoresizingMask key="autoresizingMask"/>
                             </tableHeaderView>
                         </scrollView>
-                        <button verticalHuggingPriority="750" id="FLT-14-oTS">
+                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FLT-14-oTS">
                             <rect key="frame" x="86" y="63" width="62" height="28"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <buttonCell key="cell" type="push" title="Cancel" bezelStyle="rounded" alignment="center" controlSize="small" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="AtD-EM-XII">
@@ -206,7 +206,7 @@ Gw
 </string>
                             </buttonCell>
                         </button>
-                        <button verticalHuggingPriority="750" id="7AI-dj-cZI">
+                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7AI-dj-cZI">
                             <rect key="frame" x="146" y="63" width="106" height="28"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <buttonCell key="cell" type="push" title="Apply Changes" bezelStyle="rounded" alignment="center" controlSize="small" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="8Pi-zc-9qj">
@@ -217,7 +217,7 @@ Gw
                                 <action selector="applyChangesButtonAction:" target="-2" id="xGG-vn-3w9"/>
                             </connections>
                         </button>
-                        <button id="Gsm-1X-uKY">
+                        <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gsm-1X-uKY">
                             <rect key="frame" x="25" y="34" width="148" height="20"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <buttonCell key="cell" type="check" title="Highlight selected point" bezelStyle="regularSquare" imagePosition="left" controlSize="small" state="on" inset="2" id="Ii6-Az-10T">
@@ -228,12 +228,12 @@ Gw
                                 <action selector="highlightSelectedPointCheckboxAction:" target="-2" id="W0o-lL-Znd"/>
                             </connections>
                         </button>
-                        <colorWell id="NAD-rB-TyC">
+                        <colorWell fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NAD-rB-TyC">
                             <rect key="frame" x="198" y="33" width="44" height="23"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <color key="color" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         </colorWell>
-                        <button id="xcA-3E-fTj">
+                        <button fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xcA-3E-fTj">
                             <rect key="frame" x="25" y="12" width="144" height="20"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <buttonCell key="cell" type="check" title="Highlight stroke width: " bezelStyle="regularSquare" imagePosition="left" controlSize="small" inset="2" id="WU2-gw-wUj">
@@ -241,12 +241,12 @@ Gw
                                 <font key="font" metaFont="smallSystem"/>
                             </buttonCell>
                         </button>
-                        <textField verticalHuggingPriority="750" id="Pau-2W-vX7">
+                        <textField verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pau-2W-vX7">
                             <rect key="frame" x="176" y="12" width="66" height="19"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" title="5.0" drawsBackground="YES" id="LNc-7i-ZHe">
                                 <font key="font" metaFont="smallSystem"/>
-                                <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                 <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
