--- a/MacSVG Plugin Projects/macSVG Plugins/StyleAttributeEditor/StyleAttributeEditor/StyleAttributeEditor.xib
+++ b/MacSVG Plugin Projects/macSVG Plugins/StyleAttributeEditor/StyleAttributeEditor/StyleAttributeEditor.xib
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1004" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" customObjectInstantitationMethod="direct">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15400" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11542"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15400"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -18,15 +18,15 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customView misplaced="YES" id="qsn-T2-jYx" customClass="FlippedView">
+        <customView id="qsn-T2-jYx" customClass="FlippedView">
             <rect key="frame" x="0.0" y="0.0" width="270" height="282"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
             <subviews>
-                <customView misplaced="YES" id="Y2N-ke-XhC">
+                <customView fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Y2N-ke-XhC">
                     <rect key="frame" x="0.0" y="0.0" width="270" height="282"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <subviews>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="azs-kV-qPB">
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="azs-kV-qPB">
                             <rect key="frame" x="18" y="260" width="114" height="14"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Style Attribute Editor" id="eAu-CI-9kL">
@@ -35,10 +35,10 @@
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <scrollView misplaced="YES" autohidesScrollers="YES" horizontalLineScroll="22" horizontalPageScroll="10" verticalLineScroll="22" verticalPageScroll="10" usesPredominantAxisScrolling="NO" id="ZGL-VY-zdK">
+                        <scrollView fixedFrame="YES" autohidesScrollers="YES" horizontalLineScroll="22" horizontalPageScroll="10" verticalLineScroll="22" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZGL-VY-zdK">
                             <rect key="frame" x="23" y="120" width="224" height="134"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                            <clipView key="contentView" copiesOnScroll="NO" id="wBH-Li-bz9">
+                            <clipView key="contentView" ambiguous="YES" drawsBackground="NO" copiesOnScroll="NO" id="wBH-Li-bz9">
                                 <rect key="frame" x="1" y="0.0" width="222" height="133"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
@@ -63,11 +63,11 @@
                                                 </textFieldCell>
                                                 <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                 <prototypeCellViews>
-                                                    <tableCellView misplaced="YES" id="0yI-zo-2Hm">
+                                                    <tableCellView id="0yI-zo-2Hm">
                                                         <rect key="frame" x="1" y="1" width="35" height="20"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                         <subviews>
-                                                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" misplaced="YES" id="ypr-Os-g1R">
+                                                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ypr-Os-g1R">
                                                                 <rect key="frame" x="0.0" y="3" width="91" height="17"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                 <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="5hQ-gp-DVx">
@@ -96,11 +96,11 @@
                                                 </textFieldCell>
                                                 <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                                 <prototypeCellViews>
-                                                    <tableCellView misplaced="YES" id="iqT-Er-7aT">
+                                                    <tableCellView id="iqT-Er-7aT">
                                                         <rect key="frame" x="39" y="1" width="79" height="20"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                         <subviews>
-                                                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" misplaced="YES" id="ldM-vi-fhq">
+                                                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ldM-vi-fhq">
                                                                 <rect key="frame" x="0.0" y="3" width="122" height="17"/>
                                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                                                 <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="P4u-MW-rvV">
@@ -116,7 +116,7 @@
                                                     </tableCellView>
                                                 </prototypeCellViews>
                                             </tableColumn>
-                                            <tableColumn identifier="" width="99" minWidth="10" maxWidth="3.4028234663852886e+38" id="3M4-Tb-llV">
+                                            <tableColumn width="99.5" minWidth="10" maxWidth="3.4028234663852886e+38" id="3M4-Tb-llV">
                                                 <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left" title="value">
                                                     <font key="font" metaFont="smallSystem"/>
                                                     <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
@@ -133,7 +133,7 @@
                                                         <rect key="frame" x="121" y="1" width="99" height="17"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                         <subviews>
-                                                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" id="vEk-NG-fg4">
+                                                            <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vEk-NG-fg4">
                                                                 <rect key="frame" x="0.0" y="0.0" width="99" height="17"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                                 <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="XZr-rE-VID">
@@ -160,12 +160,12 @@
                                 </subviews>
                                 <nil key="backgroundColor"/>
                             </clipView>
-                            <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="YW6-Kh-vGO">
-                                <rect key="frame" x="1" y="89" width="222" height="15"/>
+                            <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="YW6-Kh-vGO">
+                                <rect key="frame" x="-100" y="-100" width="222" height="15"/>
                                 <autoresizingMask key="autoresizingMask"/>
                             </scroller>
-                            <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="M9H-jE-mg4">
-                                <rect key="frame" x="-100" y="-100" width="15" height="102"/>
+                            <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="M9H-jE-mg4">
+                                <rect key="frame" x="207" y="23" width="16" height="110"/>
                                 <autoresizingMask key="autoresizingMask"/>
                             </scroller>
                             <tableHeaderView key="headerView" id="Ah8-cG-fUy">
@@ -173,7 +173,7 @@
                                 <autoresizingMask key="autoresizingMask"/>
                             </tableHeaderView>
                         </scrollView>
-                        <button verticalHuggingPriority="750" misplaced="YES" id="hks-hW-QMv">
+                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hks-hW-QMv">
                             <rect key="frame" x="89" y="14" width="62" height="28"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                             <buttonCell key="cell" type="push" title="Cancel" bezelStyle="rounded" alignment="center" controlSize="small" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Hah-sB-oMM">
@@ -187,7 +187,7 @@ Gw
                                 <action selector="cancelButtonAction:" target="-2" id="nOo-kr-a4H"/>
                             </connections>
                         </button>
-                        <button verticalHuggingPriority="750" misplaced="YES" id="viU-Pj-PB0">
+                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="viU-Pj-PB0">
                             <rect key="frame" x="149" y="14" width="106" height="28"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                             <buttonCell key="cell" type="push" title="Apply Changes" bezelStyle="rounded" alignment="center" controlSize="small" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="yhH-48-Ap8">
@@ -198,7 +198,7 @@ Gw
                                 <action selector="applyChangesButtonAction:" target="-2" id="mbY-9E-jdQ"/>
                             </connections>
                         </button>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" id="EZz-d7-5Oe">
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EZz-d7-5Oe">
                             <rect key="frame" x="21" y="92" width="61" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Property:" id="hQZ-bL-aVL">
@@ -207,7 +207,7 @@ Gw
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" id="VXA-Vq-QCN">
+                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VXA-Vq-QCN">
                             <rect key="frame" x="21" y="58" width="41" height="17"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Value:" id="vuN-hr-cwn">
@@ -216,7 +216,7 @@ Gw
                                 <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                             </textFieldCell>
                         </textField>
-                        <comboBox verticalHuggingPriority="750" misplaced="YES" id="PnW-u4-X2H">
+                        <comboBox verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PnW-u4-X2H">
                             <rect key="frame" x="88" y="87" width="162" height="26"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                             <comboBoxCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" completes="NO" usesDataSource="YES" numberOfVisibleItems="5" id="Foy-si-PES">
@@ -230,7 +230,7 @@ Gw
                                 <outlet property="delegate" destination="-2" id="Q8f-0g-bUl"/>
                             </connections>
                         </comboBox>
-                        <button verticalHuggingPriority="750" misplaced="YES" id="Das-qC-AJY">
+                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Das-qC-AJY">
                             <rect key="frame" x="20" y="17" width="26" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <buttonCell key="cell" type="square" title="+" bezelStyle="shadowlessSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Qda-9x-gbO">
@@ -241,7 +241,7 @@ Gw
                                 <action selector="addStylePropertyRow:" target="-2" id="ta5-e3-5rJ"/>
                             </connections>
                         </button>
-                        <button verticalHuggingPriority="750" misplaced="YES" id="v0t-Rs-851">
+                        <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="v0t-Rs-851">
                             <rect key="frame" x="46" y="17" width="26" height="21"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <buttonCell key="cell" type="square" title="-" bezelStyle="shadowlessSquare" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="gFG-w6-cRo">
@@ -252,7 +252,7 @@ Gw
                                 <action selector="deleteStylePropertyRow:" target="-2" id="Cy4-oS-eE9"/>
                             </connections>
                         </button>
-                        <comboBox verticalHuggingPriority="750" misplaced="YES" id="uIp-3s-CR3">
+                        <comboBox verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uIp-3s-CR3">
                             <rect key="frame" x="68" y="53" width="161" height="26"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                             <comboBoxCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" completes="NO" usesDataSource="YES" numberOfVisibleItems="5" id="HpQ-wp-Qvu">
@@ -266,7 +266,7 @@ Gw
                                 <outlet property="delegate" destination="-2" id="dOr-NJ-8im"/>
                             </connections>
                         </comboBox>
-                        <stepper horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" id="lNS-zf-ca0">
+                        <stepper horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lNS-zf-ca0">
                             <rect key="frame" x="231" y="54" width="19" height="27"/>
                             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                             <stepperCell key="cell" continuous="YES" alignment="left" maxValue="100" id="8eB-Wp-l2B"/>
